--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -48,6 +48,7 @@ a:hover{
   grid-template-columns: repeat(2, 1fr);
   row-gap: 40px;
   column-gap: 40px;
+  color: white;
 }
 
 .projetos{
@@ -88,7 +89,7 @@ a:hover{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 10px;
-  width: 40%;
+  width: 20%;
 }
 
 @media (hover: hover) {
